WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165817
REGRESSION: Crash in com.apple.WebKit:IPC::Connection::platformCanSendOutgoingMessages() const + 0
https://bugs.webkit.org/show_bug.cgi?id=165817
Summary
REGRESSION: Crash in com.apple.WebKit:IPC::Connection::platformCanSendOutgoin...
Ryan Haddad
Reported
2016-12-13 12:34:08 PST
Created
attachment 297035
[details]
Crash log Crash in com.apple.WebKit:IPC::Connection::platformCanSendOutgoingMessages() const + 0 Thread 1 Crashed:: Dispatch queue: com.apple.IPC.ReceiveQueue 0 com.apple.WebKit 0x0000000108ebc32c IPC::Connection::platformCanSendOutgoingMessages() const + 0 (ConnectionMac.mm:290) 1 ??? 0x0000000100000000 0 + 4294967296 2 com.apple.WebKit 0x0000000108ebc4c7 IPC::Connection::sendOutgoingMessage(std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >) + 393 (ConnectionMac.mm:379) 3 com.apple.WebKit 0x0000000108eb8340 IPC::Connection::sendOutgoingMessages() + 82 (Connection.cpp:825) 4 libdispatch.dylib 0x00007fff8770293d _dispatch_call_block_and_release + 12 5 libdispatch.dylib 0x00007fff876f740b _dispatch_client_callout + 8 6 libdispatch.dylib 0x00007fff876fc03b _dispatch_queue_drain + 754 7 libdispatch.dylib 0x00007fff87702707 _dispatch_queue_invoke + 549 8 libdispatch.dylib 0x00007fff876fad53 _dispatch_root_queue_drain + 538 9 libdispatch.dylib 0x00007fff876fab00 _dispatch_worker_thread3 + 91 10 libsystem_pthread.dylib 0x00007fff8c31f4de _pthread_wqthread + 1129 11 libsystem_pthread.dylib 0x00007fff8c31d341 start_wqthread + 13
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r209759%20(11768)/results.html
Attachments
Crash log
(66.11 KB, text/plain)
2016-12-13 12:34 PST
,
Ryan Haddad
no flags
Details
Patch
(2.00 KB, patch)
2016-12-19 12:40 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-12-13 12:36:55 PST
<
rdar://problem/29626731
>
Ryan Haddad
Comment 2
2016-12-15 16:35:20 PST
Application Specific Information: Unhandled error code 1000000a, message 'WebInspectorProxy:CreateInspectorPage:' CRASHING TEST: /xmlhttprequest/access-control-repeated-failed-preflight-crash.html
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r209881%20(11850)/http/tests/xmlhttprequest/access-control-repeated-failed-preflight-crash-crash-log.txt
Anders Carlsson
Comment 3
2016-12-19 12:40:25 PST
Created
attachment 297474
[details]
Patch
Anders Carlsson
Comment 4
2016-12-19 13:28:03 PST
Committed
r209995
: <
http://trac.webkit.org/changeset/209995
>
Darin Adler
Comment 5
2016-12-22 09:24:11 PST
Comment on
attachment 297474
[details]
Patch Any way to cover this with a regression test?
Anders Carlsson
Comment 6
2016-12-22 10:22:52 PST
(In reply to
comment #5
)
> Comment on
attachment 297474
[details]
> Patch > > Any way to cover this with a regression test?
Not easily - it was timing dependent (and relied on rescheduling the message because the mach queue was full).
Alexey Proskuryakov
Comment 7
2016-12-22 10:33:11 PST
Existing regression tests were hitting this somewhat frequently (which is how we learned about the issue).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug