REGRESSION: Crash in com.apple.WebKit:IPC::Connection::platformCanSendOutgoingMessages() const + 0 https://bugs.webkit.org/show_bug.cgi?id=165817 rdar://problem/29626731

Reviewed by Dan Bernstein.

If the receive right is invalidated before we send the message, the kernel won't be able to create a send right,
and we'll crash due to mach_msg returning MACH_SEND_INVALID_RIGHT.

Fix this by immediately creating a send right, and passing MACH_MSG_TYPE_MOVE_SEND to the attachment constructor.

* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::openFrontendConnection):

Canonical link: https://commits.webkit.org/183621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209995 268f45cc-cd09-0410-ab3c-d52691b4dbfc